Properly parse ToXContentObjects into JSON-P without ObjectMapper
Signed-off-by: Daniel Widdis <widdis@gmail.com>